# fp-sem1-lab3

./: README.md  input.txt  textbook-processor.cabal
app/: Main.hs
src/: Logic.hs  Types.hs  Utils.hs
