cabal-version:       2.2
name:                textbook-processor
version:             0.1.0.0
synopsis:            A tool to process programming textbook text
author:             Anton
build-type:          Simple

common common-options
  default-extensions:  OverloadedStrings
  ghc-options:         -Wall
  build-depends:       base >= 4.14 && < 5,
                       text >= 1.2 && < 3

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Types
                       Logic
                       Utils
  default-language:    Haskell2010

executable textbook-processor
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       textbook-processor
  default-language:    Haskell2010